<resources>
    <string name="app_name">Checking</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_student">Student</string>
    <string name="hello">Hello,</string>
    <string name="in_room">Now Location: Room  </string>
    <string name="login">Account Login</string>
    <string name="sign_in">SIGN IN</string>
    <string name="please_sign_in">Please sign in your account</string>
    <string name="student_id">Identification</string>
    <string name="password">Password</string>
    <string name="stu_remind">Tap the class to check</string>
    <string name="refresh">update location</string>
    <string name="manager_clue">Please input the Course you want to see</string>
    <string name="search">Search</string>
    <string name="tip_ma">Please specify the course ID</string>
    <string name="remember_me">Remember device</string>
    <string name="portrait">Portrait</string>
    <string name="lessons_today">Lessons today</string>
    <string name="all_course">All records</string>
</resources>
