<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:titleTextColor="@color/colorBarText" /><!---action bar size-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_in"
        android:id="@+id/please_sign"
        android:textSize="20sp"
        android:layout_below="@+id/toolbar_login"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:id="@+id/textViewID"
        android:textSize="18sp"
        android:layout_below="@+id/please_sign"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textViewPass"
        android:textSize="18sp"
        android:layout_below="@+id/id_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:typeface="monospace" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/sign_button"
        android:textSize="15sp"
        android:layout_below="@+id/login_checkbox_re"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="9"
        android:maxLines="1"
        android:digits="1234567890"
        android:inputType="text"
        android:layout_below="@+id/textViewID"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/please_sign" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:maxLength="8"
        android:maxLines="1"
        android:id="@+id/pass_text"
        android:layout_below="@+id/textViewPass"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/id_text" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:id="@+id/login_checkbox_re"
        android:layout_below="@+id/pass_text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true" />

</RelativeLayout>
